# jp-ocr-translator

./: main.py  pyproject.toml
