[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "google-cloud-translate>=3.21.1",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "manga-ocr>=0.1.14",
    "opencv-python>=4.12.0.88",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "st-img-pastebutton>=0.0.6",
]
